# agentic-ai-multi-agent-systems

./: .gitignore
LangGraph_Multi_Agent_System/: .gitignore  pyproject.toml  requirements.txt
LangGraph_Multi_Agent_System/agents/: __init__.py  base_agent.py  diagnostic.py  guidelines.py  pharmacist.py  pharmacology.py  triage.py
LangGraph_Multi_Agent_System/core/: __init__.py  config.py  exceptions.py  models.py
LangGraph_Multi_Agent_System/core/llm_providers/: __init__.py  base.py  gemini.py  lmstudio.py  openai.py
LangGraph_Multi_Agent_System/data_ingestion/: __init__.py  run_drug_ingestion.py  run_guidelines_ingestion.py
LangGraph_Multi_Agent_System/data_ingestion/connections/: __init__.py  chroma_connection_manager.py  mongodb_connection_manager.py
LangGraph_Multi_Agent_System/docs/guardrails/: 01_input_validation.md  (+12 more)
LangGraph_Multi_Agent_System/guardrails/: README.md  __init__.py  confidence_guardrails.py  input_guardrails.py  llm_judge_guardrails.py  output_guardrails.py
LangGraph_Multi_Agent_System/hitl/: __init__.py  primitives.py  review_nodes.py  run_cycle.py
LangGraph_Multi_Agent_System/infrastructure/: README.md  database_init.py  docker-compose.yml  manager.py  validator.py
LangGraph_Multi_Agent_System/memory/: __init__.py  checkpoint_helpers.py  conversation_memory.py  long_term_memory.py  working_memory.py
LangGraph_Multi_Agent_System/observability/: __init__.py  callbacks.py  decorators.py  metrics.py  tracer.py
LangGraph_Multi_Agent_System/orchestration/: __init__.py  models.py  orchestrator.py
LangGraph_Multi_Agent_System/prompts/: __init__.py  base_prompts.py  diagnostic_prompts.py  guidelines_prompts.py  pharmacist_prompts.py  pharmacology_prompts.py  triage_prompts.py
LangGraph_Multi_Agent_System/resilience/: RESILIENCE_MAS_MAPPING.md  RESILIENCY_MENTAL_MODEL.md  RESILIENCY_PATTERNS.md  __init__.py  bulkhead.py  circuit_breaker.py  config.py  exceptions.py  fallback_chain.py  mas_resiliency_usage_example.py  protocols.py  rate_limiter.py  resilient_caller.py  retry_handler.py  timeout_guard.py  token_manager.py
LangGraph_Multi_Agent_System/scripts/: README.md  __init__.py  _check_status.py
LangGraph_Multi_Agent_System/tools/: __init__.py  _clinical_knowledge_base.py  guidelines_tools.py  pharmacology_tools.py  triage_tools.py
(+200 files in other folders)
